syntax = "proto3";
option java_outer_classname = "GameProto";

package proto;

//请求加入桌子
message ReqEnterTable {
    bytes tableId = 1;
    bytes head = 2;
    bytes nick = 3;
}

//加入桌子回复
message AckEnterTable {
    repeated Player players = 1;
    TableInfo tableInfo = 2;
}

message Player{
    int32 roleId = 1;
    int32 position = 2;
    bytes avatar = 3;
    bytes nickName = 4;
    repeated int32 cards = 5;
}

message TableInfo{
    int32 roomId = 1;
    bytes tableId = 2;
    int32 landlord = 3;
}