syntax = "proto3";
option java_outer_classname = "RoomProto";

package proto;

//请求加入房间
message ReqJoinRoomTable {
    int32 roomId = 1;
}

//加入房间回复
message AckJoinRoomTable {
    int64 tableId = 1;
}